log-collection/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-collection
spec:
  #replicas: 2
  selector:
    matchLabels:
      app: log-collection
  template:
    metadata:
      labels:
        app: log-collection
    spec:
      containers:
      - image: quay.io/qxu/log-collection:79
        name: log-collection
        ports:
        - containerPort: 8080
